# EWP-Code

./: .gitignore  README.md  pyproject.toml
linux_analyzer/: pyproject.toml
src/linux_analyzer/analysis/: __init__.py  static.py
src/linux_analyzer/checks/: base.py
src/linux_analyzer/checks/filesystem/: permissions.py
src/linux_analyzer/checks/system/: kernel_version.py
src/linux_analyzer/checks/users/: user_accounts.py
src/linux_analyzer/cli/: main.py  menu.py  output.py  prompts.py
src/linux_analyzer/core/: context.py  models.py  orchestrator.py  pipeline.py
src/linux_analyzer/ports/: analysis.py  checks.py
src/linux_analyzer/system/: os_info.py  permissions.py  user_accounts.py
