[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "linux-analyzer"
version = "0.1.0"
description = "Misconfiguration scanner for Linux"
dependencies = [
    "typer"
]

[project.scripts]
linux-analyzer = "linux_analyzer.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]


